Summary of Changes since Proof General 2.0
------------------------------------------

* Documentation improvements